Working interpreter and some BF examples

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,16 @@
 cmake_minimum_required(VERSION 3.17)
 project(Compiler)
 
+set(CMAKE_CXX_COMPILER g++-9)
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_FLAGS "-I/usr/local/opt/flex/include")
 
 # FLEX and BISON
 
 find_package(BISON 3.6 REQUIRED)
 find_package(FLEX REQUIRED)
 
-BISON_TARGET(parser utils/parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.c)
+BISON_TARGET(parser utils/parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.cpp)
 FLEX_TARGET(scanner utils/lexer.l ${CMAKE_CURRENT_BINARY_DIR}/lexer.c)
 ADD_FLEX_BISON_DEPENDENCY(scanner parser)
 
@@ -32,14 +34,14 @@ file(GLOB HEADERS include/*.hpp)
 file(GLOB SOURCES src/*.cpp)
 
 add_executable(
-        compiler
-        main.cpp
+        interpreter
+        interpreter.cpp
         ${HEADERS}
         ${SOURCES}
         ${BISON_parser_OUTPUTS}
         ${FLEX_scanner_OUTPUTS})
 
-llvm_map_components_to_libnames(llvm_libs support core irreader)
-
-# Link against LLVM libraries
-target_link_libraries(compiler ${llvm_libs})
+#llvm_map_components_to_libnames(llvm_libs support core irreader)
+#
+## Link against LLVM libraries
+#target_link_libraries(compiler ${llvm_libs})
