Fully functional compiler

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_CXX_COMPILER clang++)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "-I/usr/local/opt/flex/include")
 
+set(CMAKE_CXX_FLAGS "-Wall -O3")
+
 # FLEX and BISON
 
 find_package(BISON 3.6 REQUIRED)
